# acia

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
acia/: __init__.py  main.py
acia/analyzers/: __init__.py  code_analyzer.py  log_analyzer.py
acia/core/: __init__.py  config.py  models.py  orchestrator.py
acia/engine/: __init__.py  improvement_engine.py
acia/git/: __init__.py  change_manager.py
acia/notifications/: __init__.py  notification_service.py
acia/storage/: __init__.py  state_store.py
deploy/: acia.service
docs/: OPERATIONS.md
